--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <h1>How did we do?</h1>
         <p>Please let us know how we did with your support request. All feedback is appreciated to help us improve our offering!</p>
-        <div class~="rating-section">
+        <div class="rating-section">
             <button id="one">1</button>
             <button id="two">2</button>
             <button id="three">3</button>
